--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Frame Catalog</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="common.css">
+  <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
   <header>
@@ -26,6 +28,7 @@
     <div class="thumb-card">
       <a href="" class="thumb-link">
         <div class="thumb-img-container">
+          <div class="thumb-label"></div>
           <img src="" alt="Frame Image" class="thumb-img" />
         </div>
         <div class="thumb-name"></div>
@@ -33,7 +36,7 @@
     </div>
   </template>
 
-  <script src="app.js"></script>
+  <script src="main.js"></script>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       CatalogApp.initMainPage();
